; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xact.c_EndParallelWorkerTransaction.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xact.c_EndParallelWorkerTransaction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@CurrentTransactionState = common dso_local global %struct.TYPE_2__* null, align 8
@TBLOCK_PARALLEL_INPROGRESS = common dso_local global i64 0, align 8
@TBLOCK_DEFAULT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @EndParallelWorkerTransaction() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CurrentTransactionState, align 8
  %2 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 0
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @TBLOCK_PARALLEL_INPROGRESS, align 8
  %5 = icmp eq i64 %3, %4
  %6 = zext i1 %5 to i32
  %7 = call i32 @Assert(i32 %6)
  %8 = call i32 (...) @CommitTransaction()
  %9 = load i64, i64* @TBLOCK_DEFAULT, align 8
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CurrentTransactionState, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store i64 %9, i64* %11, align 8
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @CommitTransaction(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
